[gd_scene load_steps=23 format=3 uid="uid://bkdjrxkoinvcx"]

[ext_resource type="Script" path="res://code/player/player.gd" id="1_lcf1r"]
[ext_resource type="Texture2D" uid="uid://b2yah6ch5fkjy" path="res://art/Tech Dungeon Roguelite - Asset Pack (v5)/Players/players green x3.png" id="2_oiav6"]
[ext_resource type="AudioStream" uid="uid://dx1ljy2lwdqss" path="res://art/sound/hitHurt.wav" id="7_237r8"]
[ext_resource type="FontFile" uid="uid://c34yck4u33u8a" path="res://fonts/Xolonium-Regular.ttf" id="7_evhow"]
[ext_resource type="Script" path="res://code/player/DamageArea.gd" id="7_nrxxt"]
[ext_resource type="AudioStream" uid="uid://docayjucvki2a" path="res://art/sound/pickupCoin.wav" id="9_4wd03"]
[ext_resource type="PackedScene" uid="uid://bkj2v2cn4y301" path="res://code/player/weapon_selection.tscn" id="9_j722a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fg0dp"]
atlas = ExtResource("2_oiav6")
region = Rect2(0, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dfsj"]
atlas = ExtResource("2_oiav6")
region = Rect2(96, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wavi4"]
atlas = ExtResource("2_oiav6")
region = Rect2(192, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw0co"]
atlas = ExtResource("2_oiav6")
region = Rect2(288, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_urd56"]
atlas = ExtResource("2_oiav6")
region = Rect2(384, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pigij"]
atlas = ExtResource("2_oiav6")
region = Rect2(480, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xppt"]
atlas = ExtResource("2_oiav6")
region = Rect2(576, 1152, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lopnc"]
atlas = ExtResource("2_oiav6")
region = Rect2(192, 672, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbho2"]
atlas = ExtResource("2_oiav6")
region = Rect2(480, 960, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lrt0"]
atlas = ExtResource("2_oiav6")
region = Rect2(576, 960, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji2w5"]
atlas = ExtResource("2_oiav6")
region = Rect2(672, 960, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1dre"]
atlas = ExtResource("2_oiav6")
region = Rect2(768, 960, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lpgw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg0dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dfsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wavi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw0co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urd56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pigij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xppt")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lopnc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbho2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lrt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji2w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1dre")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yn1d6"]
radius = 22.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cv5qy"]
radius = 26.0
height = 68.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_lcf1r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8lpgw")
animation = &"run"
frame_progress = 0.734768

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_yn1d6")

[node name="DamageArea" type="Area2D" parent="." groups=["player"]]
script = ExtResource("7_nrxxt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea" groups=["player"]]
position = Vector2(-1, 15)
shape = SubResource("CapsuleShape2D_cv5qy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="DamageArea"]
stream = ExtResource("7_237r8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MoneyCounter" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("7_evhow")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Health" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = -130.0
offset_right = 287.0
offset_bottom = -52.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_evhow")
theme_override_font_sizes/font_size = 64
text = "20/20"

[node name="WeaponSelection" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_j722a")]
unique_name_in_owner = true
position = Vector2(0, 15)
player = NodePath("..")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4wd03")

[connection signal="area_entered" from="DamageArea" to="." method="_on_area_2d_area_entered"]
[connection signal="dead" from="DamageArea" to="." method="dead_signal"]
